added todos for html, copied assignment into readme, added base scss file

--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
   <body>
     <!--TODO Body Picture with background-->
 
+    <!--TODO 3 ICONS in a grid-->
+
+    <!-- ICons must link to apps via a modal-->
+
+    <!--Apps must contain text, image or form-->
+
     <footer>
       <!--TODO TaskBar-->
+
+      <!--TODO NAVBar with start menu -->
+      <!--menu contains a flex section with content-->
+
+      <!--TODO Display current time-->
     </footer>
   </body>
 </html>
