--- a/index.html
+++ b/index.html
@@ -18,11 +18,15 @@
 
     <footer>
       <!--TODO TaskBar-->
-
-      <!--TODO NAVBar with start menu -->
-      <!--menu contains a flex section with content-->
-
-      <!--TODO Display current time-->
+      <section class="Taskbar">
+        <!--TODO NAVBar with start menu -->
+        <section class="Taskbar__Start">
+          <img src="images/icons8-windows-10-30Alpha.png" />
+        </section>
+        <!--menu contains a flex section with content-->
+        <section class="Taskbar__Clock"></section>
+        <!--TODO Display current time-->
+      </section>
     </footer>
   </body>
 </html>
