--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <!--TODO Body Picture with background-->
-
+    <section class="desktop">
+      <section class="desktop__Icon"></section>
+      <section class="desktop__Icon"></section>
+      <section class="desktop__Icon"></section>
+    </section>
     <!--TODO 3 ICONS in a grid-->
 
     <!-- ICons must link to apps via a modal-->
@@ -23,9 +27,17 @@
         <section class="Taskbar__Start">
           <img src="images/icons8-windows-10-30Alpha.png" />
         </section>
+        <section class="Taskbar__Search"></section>
+
+        <section class="Taskbar__AppHolder"></section>
+
+        <section class="TaskBar__IconHolder"></section>
         <!--menu contains a flex section with content-->
-        <section class="Taskbar__Clock"></section>
-        <!--TODO Display current time-->
+        <section class="Taskbar__ClockHolder">
+          <p class="taskbar__Clock">00:00:00</p>
+          <p class="taskbar__Date">00/00/0000</p>
+        </section>
+        <!--TODO Display current time (with JS)-->
       </section>
     </footer>
   </body>
