added taskbar search bar. moved taskbar color to scss theme page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
         <section class="Taskbar__Start">
           <img src="images/icons8-windows-10-30Alpha.png" />
         </section>
-        <section class="Taskbar__Search"></section>
+        <section class="Taskbar__Search">
+          <img class="Taskbar__SearchIcon" src="images/icons8-search-32.png" />
+          <input
+            class="Taskbar__SearchBar"
+            type="text"
+            placeholder="Type here to search"
+          />
+        </section>
 
         <section class="Taskbar__AppHolder"></section>
 
