added classes to search bar bits. styled searchbar

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <section class="TaskBar__IconHolder"></section>
         <!--menu contains a flex section with content-->
         <section class="Taskbar__ClockHolder">
-          <p class="taskbar__Clock">00:00:00</p>
-          <p class="taskbar__Date">00/00/0000</p>
+          <span class="taskbar__Clock">00:00:00</span>
+          <span class="taskbar__Date">00/00/0000</span>
         </section>
         <!--TODO Display current time (with JS)-->
       </section>
