--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
   <body>
     <!--TODO Body Picture with background-->
     <section class="desktop">
-      <section class="desktop__Icon"></section>
-      <section class="desktop__Icon"></section>
-      <section class="desktop__Icon"></section>
+      <section class="desktop__Icon">
+        <img src="images/icons8-microsoft-word-30.png" />
+      </section>
+      <section class="desktop__Icon">
+        <img src="images/icons8-form-30.png" />
+      </section>
+      <section class="desktop__Icon">
+        <img src="images/icons8-picture-30.png" />
+      </section>
     </section>
     <!--TODO 3 ICONS in a grid-->
 
@@ -26,6 +32,7 @@
         <!--TODO NAVBar with start menu -->
         <section class="Taskbar__Start">
           <img src="images/icons8-windows-10-30Alpha.png" />
+          <section class="Taskbar__StartMenu"></section>
         </section>
         <section class="Taskbar__Search">
           <img class="Taskbar__SearchIcon" src="images/icons8-search-32.png" />
