added some of the start menu bits

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <!--TODO Body Picture with background-->
+    <!--TODO 3 ICONS in a grid-->
+    <!-- ICons must link to apps via a modal-->
+    <!--Apps must contain text, image or form-->
+
     <section class="desktop">
       <section class="desktop__Icon">
         <img src="images/icons8-microsoft-word-30.png" />
@@ -20,11 +24,38 @@
         <img src="images/icons8-picture-30.png" />
       </section>
     </section>
-    <!--TODO 3 ICONS in a grid-->
-
-    <!-- ICons must link to apps via a modal-->
-
-    <!--Apps must contain text, image or form-->
+    <!--On clicking start menu, show this section-->
+    <section class="StartMenu">
+      <section class="StartMenu__SettingsOptions">
+        <!--IDK what to call this, but it has the power button and stuff-->
+        <section class="StartMenu__PowerButton">
+          <img src="images/icons8-shutdown-50.png" />
+        </section>
+        <section class="StartMenu__SettingsButton">
+          <img src="images/icons8-settings-48.png" />
+        </section>
+        <section class="StartMenu__PicturesButton">
+          <img src="images/icons8-image-gallery-50.png" />
+        </section>
+        <section class="StartMenu__DocumentsButton">
+          <img src="images/icons8-file-48.png" />
+        </section>
+        <section class="StartMenu__UserButton">
+          <img src="images/icons8-user-64.png" />
+        </section>
+      </section>
+      <section class="StartMenu__Icons">
+        <section class="StartMenu__IconLink">
+          <img src="images/icons8-microsoft-word-30.png" />
+        </section>
+        <section class="StartMenu__IconLink">
+          <img src="images/icons8-form-30.png" />
+        </section>
+        <section class="StartMenu__IconLink">
+          <img src="images/icons8-picture-30.png" />
+        </section>
+      </section>
+    </section>
 
     <footer>
       <!--TODO TaskBar-->
@@ -32,7 +63,6 @@
         <!--TODO NAVBar with start menu -->
         <section class="Taskbar__Start">
           <img src="images/icons8-windows-10-30Alpha.png" />
-          <section class="Taskbar__StartMenu"></section>
         </section>
         <section class="Taskbar__Search">
           <img class="Taskbar__SearchIcon" src="images/icons8-search-32.png" />
