added color for desktop icon hover to themes. styled desktop icons

--- a/index.html
+++ b/index.html
@@ -16,12 +16,27 @@
     <section class="desktop">
       <section class="desktop__Icon">
         <img src="images/icons8-microsoft-word-30.png" />
+        <img
+          class="desktop__Icon_shortcut"
+          src="images/icons8-shortcut-48.png"
+        />
+        <p class="desktop__Icon_name">A text File</p>
       </section>
       <section class="desktop__Icon">
         <img src="images/icons8-form-30.png" />
+        <img
+          class="desktop__Icon_shortcut"
+          src="images/icons8-shortcut-48.png"
+        />
+        <p class="desktop__Icon_name">A Form</p>
       </section>
       <section class="desktop__Icon">
         <img src="images/icons8-picture-30.png" />
+        <img
+          class="desktop__Icon_shortcut"
+          src="images/icons8-shortcut-48.png"
+        />
+        <p class="desktop__Icon_name">A Picture</p>
       </section>
     </section>
     <!--On clicking start menu, show this section-->
