actually remembered to save the file so stuff gets added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
     <section class="desktop">
       <section class="desktop__Icon">
-        <img src="images/icons8-microsoft-word-30.png" />
+        <!--click the image, open the modal-->
+        <img
+          src="images/icons8-microsoft-word-30.png"
+        /><!--TODO create the modals-->
         <img
           class="desktop__Icon_shortcut"
           src="images/icons8-shortcut-48.png"
