found the dblclick listener, added planning for modals in comments

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!--click the image, open the modal-->
         <img
           src="images/icons8-microsoft-word-30.png"
-        /><!--TODO create the modals-->
+        /><!--TODO create the modals. each modal needs a unique ID, but a common class-->
         <img
           class="desktop__Icon_shortcut"
           src="images/icons8-shortcut-48.png"
