fixed background image not scaling correctly. moved start button image

--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
       <section class="Taskbar">
         <!--TODO NAVBar with start menu -->
         <section class="taskBar--left">
-          <section class="Taskbar__Start">
-            <img src="images/icons8-windows-10-30Alpha.png" />
+          <section class="Taskbar__StartHolder">
+            <section class="Taskbar__Start">
+              <img src="images/icons8-windows-10-30Alpha.png" />
+            </section>
           </section>
           <section class="Taskbar__Search">
             <img
