added first modal for text file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Apps must contain text, image or form-->
 
     <section class="desktop">
-      <section class="desktop__Icon">
+      <section class="desktop__Icon" id="textfileModal">
         <!--click the image, open the modal-->
         <img
           src="images/icons8-microsoft-word-30.png"
@@ -24,8 +24,19 @@
           src="images/icons8-shortcut-48.png"
         />
         <p class="desktop__Icon_name">A text File</p>
+        <span class="textFile__modal">
+          <p class="textFile__modal--text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea itaque
+            illum in maxime soluta expedita ratione quia provident dignissimos
+            eius, quos, dolorum possimus asperiores quibusdam illo nemo est quae
+            rerum? Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Natus explicabo excepturi maiores vero harum laboriosam fuga quis
+            laudantium voluptate exercitationem earum fugiat ipsa, dolore itaque
+            nam autem quasi consectetur molestias.
+          </p>
+        </span>
       </section>
-      <section class="desktop__Icon">
+      <section class="desktop__Icon" id="formfileModal">
         <img src="images/icons8-form-30.png" />
         <img
           class="desktop__Icon_shortcut"
@@ -33,7 +44,7 @@
         />
         <p class="desktop__Icon_name">A Form</p>
       </section>
-      <section class="desktop__Icon">
+      <section class="desktop__Icon" id="picturefileModal">
         <img src="images/icons8-picture-30.png" />
         <img
           class="desktop__Icon_shortcut"
