added css classes for show and hiding modals

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           src="images/icons8-shortcut-48.png"
         />
         <p class="desktop__Icon_name">A text File</p>
-        <span class="textFile__modal">
+        <span class="textFile__modal hidden">
           <p class="textFile__modal--text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea itaque
             illum in maxime soluta expedita ratione quia provident dignissimos
