--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           src="images/icons8-shortcut-48.png"
         />
         <p class="desktop__Icon_name">A text File</p>
-        <section class="modal" id="textfileModal">
-          <div class="hidden">
+        <section class="modal hidden" id="textfileModal">
+          <div>
             <div class="fileBar__close">X</div>
             <p class="textFile__modal--text">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea itaque
