--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <p class="desktop__Icon_name">A text File</p>
 
         <section class="modal hidden" id="textfileModal">
+          <!--Modal to open as the ID?-->
           <div>
             <div class="fileBar__close">X</div>
             <p class="textFile__modal--text">
