found an image for the picture section of the project

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
         <section class="modal hidden" id="formModal">
           <div>
             <div class="fileBar__close">X</div>
-            <div class="formFile__modal--form"></div>
+            <div class="formFile__modal--form">
+              <form>
+                <!--Form goes here-->
+              </form>
+            </div>
           </div>
         </section>
       </section>
@@ -67,7 +71,9 @@
         <section class="modal hidden" id="pictureModal">
           <div>
             <div class="fileBar__close">X</div>
-            <div class="pictureFile__modal--picture"></div>
+            <div class="pictureFile__modal--picture">
+              <img src="images/winDogeImg.jpg" alt="Windoge" />
+            </div>
           </div>
         </section>
       </section>
