added form to index page, started turning the open bit into a function

--- a/index.html
+++ b/index.html
@@ -48,12 +48,25 @@
         />
         <p class="desktop__Icon_name">A Form</p>
 
-        <section class="modal hidden" id="formModal">
+        <section class="modal display" id="formModal">
           <div>
             <div class="fileBar__close">X</div>
             <div class="formFile__modal--form">
               <form>
                 <!--Form goes here-->
+                <input type="text" placeholder="Please enter your full name" />
+                <input
+                  type="password"
+                  placeholder="Please enter your password"
+                />
+                <label for="birthday">Please enter your birthday </label>
+                <input type="date" />
+                <input type="email" placeholder="please enter your email" />
+                <input
+                  type="text"
+                  placeholder="please enter your credit card details"
+                />
+                <input type="submit" />
               </form>
             </div>
           </div>
