--- a/index.html
+++ b/index.html
@@ -85,7 +85,11 @@
           <div>
             <div class="fileBar__close" id="picturefileModal">X</div>
             <div class="pictureFile__modal--picture">
-              <img src="images/winDogeImg.jpg" alt="Windoge" />
+              <img
+                class="pictureFile__windoge"
+                src="images/winDogeImg.jpg"
+                alt="Windoge"
+              />
             </div>
           </div>
         </section>
