scripts to show/hide the start menu started and support ids in index added

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </section>
     </section>
     <!--On clicking start menu, show this section-->
-    <section class="StartMenu">
+    <section class="StartMenu" id="StartMenu__holder">
       <section class="StartMenu__SettingsOptions">
         <!--IDK what to call this, but it has the power button and stuff-->
         <section class="StartMenu__PowerButton">
@@ -134,7 +134,7 @@
         <!--TODO NAVBar with start menu -->
         <section class="taskBar--left">
           <section class="Taskbar__StartHolder">
-            <section class="Taskbar__Start">
+            <section class="Taskbar__Start--Button">
               <img src="images/icons8-windows-10-30Alpha.png" />
             </section>
           </section>
