class names, styling and scripting to make the start menu appear and disappear done

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </section>
     </section>
     <!--On clicking start menu, show this section-->
-    <section class="StartMenu" id="StartMenu__holder">
+    <section class="StartMenu startHidden" id="StartMenu__holder">
       <section class="StartMenu__SettingsOptions">
         <!--IDK what to call this, but it has the power button and stuff-->
         <section class="StartMenu__PowerButton">
