time and date now gotten from user and displayed in clock in corner

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
           <!--menu contains a flex section with content-->
           <section class="Taskbar__ClockHolder">
             <!--TODO Display current time (with JS)-->
-            <span class="taskbar__Clock">00:00:00</span>
-            <span class="taskbar__Date">00/00/0000</span>
+            <span class="taskbar__Clock" id="taskbar__Clock">00:00:00</span>
+            <span class="taskbar__Date" id="taskbar__Date">00/00/0000</span>
           </section>
         </section>
       </section>
