readme done , basic MVP met, save for breakpoints

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           class="desktop__Icon_shortcut"
           src="images/icons8-shortcut-48.png"
         />
-        <p class="desktop__Icon_name">text</p>
+        <p class="desktop__Icon_name">text.txt</p>
 
         <section class="modal hidden" id="textfileModal--modal">
           <!--Modal to open as the ID?-->
@@ -97,7 +97,7 @@
           class="desktop__Icon_shortcut"
           src="images/icons8-shortcut-48.png"
         />
-        <p class="desktop__Icon_name">haha funny doggy</p>
+        <p class="desktop__Icon_name">haha funny doggy.jpg.jpg</p>
 
         <section class="modal hidden" id="picturefileModal--modal">
           <div>
