added the draggable set stuff to the modals - I know it works, I have managed to drag one of them once!

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         />
         <p class="desktop__Icon_name">text.txt</p>
 
-        <section class="modal hidden" id="textfileModal--modal">
+        <section class="modal hidden draggable" id="textfileModal--modal">
           <!--Modal to open as the ID?-->
           <div>
             <div class="filebar">
@@ -54,7 +54,7 @@
         />
         <p class="desktop__Icon_name">Identity Theft.pdf</p>
 
-        <section class="modal hidden" id="formModal--modal">
+        <section class="modal hidden draggable" id="formModal--modal">
           <div>
             <div class="filebar">
               <div class="fileBar__close" id="formModal">X</div>
@@ -99,7 +99,7 @@
         />
         <p class="desktop__Icon_name">haha funny doggy.jpg.jpg</p>
 
-        <section class="modal hidden" id="picturefileModal--modal">
+        <section class="modal hidden draggable" id="picturefileModal--modal">
           <div>
             <div class="filebar">
               <div class="fileBar__close" id="picturefileModal">X</div>
